Ready to deploy

--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "24c23ae4",
    "metadata": {},
    "outputs": [
@@ -48,13 +48,9 @@
       "Requirement already satisfied: importlib-resources>=3.2.0 in d:\\project\\venv\\lib\\site-packages (from matplotlib->catboost) (6.4.5)\n",
       "Requirement already satisfied: narwhals>=1.15.1 in d:\\project\\venv\\lib\\site-packages (from plotly->catboost) (1.42.1)\n",
       "Requirement already satisfied: zipp>=3.1.0 in d:\\project\\venv\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib->catboost) (3.20.2)\n",
-      "Collecting xgboost\n",
-      "  Using cached xgboost-2.1.4-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: xgboost in d:\\project\\venv\\lib\\site-packages (2.1.4)\n",
       "Requirement already satisfied: numpy in d:\\project\\venv\\lib\\site-packages (from xgboost) (1.24.4)\n",
-      "Requirement already satisfied: scipy in d:\\project\\venv\\lib\\site-packages (from xgboost) (1.10.1)\n",
-      "Using cached xgboost-2.1.4-py3-none-win_amd64.whl (124.9 MB)\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-2.1.4\n"
+      "Requirement already satisfied: scipy in d:\\project\\venv\\lib\\site-packages (from xgboost) (1.10.1)\n"
      ]
     }
    ],
@@ -65,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "fe2de016",
    "metadata": {},
    "outputs": [],
@@ -99,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "c07e7e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('student-performance.csv', sep='\\t')"
+    "df = pd.read_csv('StudentsPerformance.csv', sep='\\t')"
    ]
   },
   {
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "638c525a",
    "metadata": {},
    "outputs": [
@@ -228,7 +224,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "f2f71372",
    "metadata": {},
    "outputs": [],
@@ -257,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "e9a6b637",
    "metadata": {},
    "outputs": [
@@ -362,7 +358,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "920eefa4",
    "metadata": {},
    "outputs": [
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "acb63ee5",
    "metadata": {},
    "outputs": [],
@@ -419,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "e74354b1",
    "metadata": {},
    "outputs": [
@@ -440,7 +436,7 @@
        "Name: math score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "791bd409",
    "metadata": {},
    "outputs": [],
@@ -476,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "844b49b1",
    "metadata": {},
    "outputs": [],
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "e45ae665",
    "metadata": {},
    "outputs": [
@@ -496,7 +492,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "f6a7d1ee",
    "metadata": {},
    "outputs": [
@@ -517,7 +513,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "99b198a0",
    "metadata": {},
    "outputs": [],
@@ -554,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "64ed9347",
    "metadata": {},
    "outputs": [
@@ -621,22 +617,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.1957\n",
-      "- Mean Absolute Error: 6.4600\n",
-      "- R2 Score: 0.7240\n",
+      "- Root Mean Squared Error: 7.6877\n",
+      "- Mean Absolute Error: 6.1100\n",
+      "- R2 Score: 0.7571\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3009\n",
-      "- Mean Absolute Error: 1.8364\n",
-      "- R2 Score: 0.9765\n",
+      "- Root Mean Squared Error: 2.2619\n",
+      "- Mean Absolute Error: 1.8004\n",
+      "- R2 Score: 0.9773\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9986\n",
-      "- Mean Absolute Error: 4.6142\n",
-      "- R2 Score: 0.8521\n",
+      "- Root Mean Squared Error: 5.9280\n",
+      "- Mean Absolute Error: 4.5878\n",
+      "- R2 Score: 0.8556\n",
       "===================================\n",
       "\n",
       "\n",
@@ -668,14 +664,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8247\n",
-      "- Mean Absolute Error: 4.7750\n",
-      "- R2 Score: 0.8495\n",
+      "- Root Mean Squared Error: 5.8037\n",
+      "- Mean Absolute Error: 4.7657\n",
+      "- R2 Score: 0.8506\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9706\n",
-      "- Mean Absolute Error: 4.6129\n",
-      "- R2 Score: 0.8535\n",
+      "- Root Mean Squared Error: 6.1877\n",
+      "- Mean Absolute Error: 4.7744\n",
+      "- R2 Score: 0.8427\n",
       "===================================\n",
       "\n",
       "\n"
@@ -741,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "0b3460b7",
    "metadata": {},
    "outputs": [
@@ -782,19 +778,19 @@
        "      <td>0.879689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.853504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852128</td>\n",
+       "      <td>0.855589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
        "      <td>0.851632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.842657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -814,7 +810,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.723965</td>\n",
+       "      <td>0.757128</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -824,16 +820,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879689\n",
-       "8       AdaBoost Regressor  0.853504\n",
-       "5  Random Forest Regressor  0.852128\n",
+       "5  Random Forest Regressor  0.855589\n",
        "7    CatBoosting Regressor  0.851632\n",
+       "8       AdaBoost Regressor  0.842657\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783898\n",
-       "4            Decision Tree  0.723965"
+       "4            Decision Tree  0.757128"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "96552f1b",
    "metadata": {},
    "outputs": [
@@ -882,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "id": "d72b0d30",
    "metadata": {},
    "outputs": [
@@ -905,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "76094ec5",
    "metadata": {},
    "outputs": [
@@ -934,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "fc14feb4",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1049,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,11 +1061,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "d11251ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test preparation course  math score  reading score  writing score  \n",
+       "0                    none          72             72             74  \n",
+       "1               completed          69             90             88  \n",
+       "2                    none          90             95             93  \n",
+       "3                    none          47             57             44  \n",
+       "4                    none          76             78             75  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
